Project Ready for Review
The additional message for exceeds is in the name field. It does not allow special characters such as an apostrophe or hyphen.

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,17 @@ jQuery added elements
   margin-top: -8px;
 }
 
+#ccReqs {
+	display: flex;
+	flex-direction: column;
+}
+
+#ccReqs li {
+	margin-right: auto;
+	margin-bottom: auto;
+}
+
+
 /* ================================= 
   Form Element Styles
 ==================================== */
